<resources>
    <string name="app_name">Cardido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--    Ini Login string buat login-->
    <string name="login">Login</string>
    <string name="hello">Hi! Welcome</string>
    <string name="email">Email*</string>
    <string name="pass">Password*</string>
    <string name="button">Login</string>
    <string name="signUp">Sign Up</string>

    <!--    Ini string buat Sign Up-->
    <string name="message">Please Enter your Identity!</string>
    <string name="first">First Name*</string>
    <string name="last">Last Name*</string>
    <string name="phone">Phone*</string>
    <string name="country">Country</string>

    <!--    ini String buat sidebar-->
    <string name="home">Home</string>
    <string name="pp">Profile</string>
    <string name="booking">My Booking</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="setting">Settings</string>
    <string name="keluar">Sign Out</string>

    <!--    Ini string buat About Us-->
    <string name="aboutUs">About Us</string>
    <string name="desc">Description</string>
    <string name="desc1">Cardido is a platform used
        \nby many people to find
        \nconvenience in renting a car. </string>
    <string name="contact">Our Contact :</string>
    <string name="contact1">(021) 82601735</string>
    <string name="developer">Developer : </string>
    <string name="D1">Benedicto Natanael /180709702</string>
    <string name="D2">Clara Dilla / 180709594</string>
    <string name="D3">Theodore Aldo / 180709607</string>

    <!--     Ini String buat pemesanan-->
    <string name="pick_up_date">Pick-up Date</string>
    <string name="drop_out_date">Drop-out Date</string>
    <string name="pick_up_times">Pick-up Times</string>
    <string name="drop_out_times">Drop-out Times</string>
    <string name="pick_up_loc">Pick Up Location</string>
    <string name="stKategoriAge">18-29</string>
    <string name="ndKategoriAge">30-40</string>
    <string name="trKategoriAge">40+</string>
    <string name="driver_age">Driver`s Age</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="time">Time</string>


    <string name="action_home">Home</string>
    <string name="action_widget">Widget</string>
    <string name="action_dialog">Dialog</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_book">My Booking</string>
    <string name="exit">Exit</string>
    <string name="send">Send</string>
    <string name="first_title">MenuGuided9702_Benedicto Nathanael</string>
    <string name="hint_widget">Please fill this widget!</string>
    <string name="hint_first_name">Your first name</string>
    <string name="hint_last_name">Your last name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Ini string buat Details-->
    <string name="car_image">Receipt Image</string>
    <string name="details">Details</string>
    <string name="nameD">Name</string>
    <string name="emailD">Email</string>
    <string name="phoneD">Phone Number</string>
    <string name="countryD">Country</string>
    <string name="pick_up_location">Pick-up Location</string>
    <string name="drop_off_date">Drop-Off Date</string>
    <string name="drop_off_time">Drop-Off Time</string>
    <string name="continueD">Continue</string>
    <string name="receipt_title"></string>
    <string name="pay">Pay</string>

    <!--    Ini buat settings-->
    <string name="header">Set Your Theme</string>
    <string name="body">Theme :</string>
    <string name="save">Save</string>
    <string name="theme">Night Mode</string>

    <!--    Ini buat Profil-->
    <string name="judul">Profile</string>
    <string name="deskripsi">Please set your Profile!</string>
    <string name="username">Username</string>
    <string name="no">Phone</string>

    <string name="NLMode">Dark Mode</string>

    <!--    Ini string untuk success-->
    <string name="success">Success!</string>
    <string name="finish">Finish</string>

    <!--    ini buat main activity-->
    <string name="wellcome">Welcome to Cardido</string>
    <string name="searchTxt">What</string>
    <string name="access_token">pk.eyJ1IjoiYmVubmF0aDk3MDIiLCJhIjoiY2tmcXFhaWt0MDd6ejJ5cWxqbWwzaGYxaCJ9.4ETLW7gFNVDSreF9xNk40w</string>
    <string name="next">Next</string>

    <!--    ini buat detail-->
    <string name="total">Total :</string>
    <string name="price">Rental Price :</string>
    <string name="number">Number Of Days :</string>
    <string name="rp">Rp</string>

    <!--    ini recycler-->
    <string name="passanger">Passengers</string>
    <string name="bags">Bags</string>


    <!--    ini edit car admin-->
    <string name="btnEdit">Edit</string>
    <string name="cName">Car`s Name</string>
    <string name="cPlatNomor">License Plate</string>
    <string name="cType">Car`s Type</string>
    <string name="passangers">Passengers</string>
    <string name="bag">Bags</string>
    <string name="fuel">Fuel</string>
    <string name="file">Select a file</string>
    <string name="cPrice">Price</string>


    <!--    ini buat detail booking-->
    <string name="jdlDetail">Detail Booking</string>
    <string name="btnDelete">Delete</string>
    <string name="id">Id Booking</string>
    <string name="bName">Name</string>
    <string name="dBooking">Booking Date</string>
    <string name="tBooking">Booking Time</string>

    
    <!--    ini buat detail car-->
    <string name="id_car">Details</string>
    <string name="cars_name">Car`s Name</string>
    <string name="cars_type">Car`s Type</string>
    <string name="cars_pic">Cas`s Picture</string>
    <string name="priceInDetail">Price</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    
    <!--    ini buat menu admin-->
    <string name="headline1">Hi,Admin</string>
    <string name="subtitle1">Welcome Back!</string>
    <string name="addCar">Add Car</string>
    <string name="showList">Show List</string>
    <string name="btnLogout">Logout</string>
</resources>