<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@+id/toolbar3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_chevron_left_24"
        android:tint="#ffff"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="113dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/pick_up_loc"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/materialTextView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/pick_up_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pickDate_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/dropDate_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/materialTextView2"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pickDateInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/pick_up_date"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="12dp"
        android:text="@string/drop_out_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropDate_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dropDateInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/drop_out_date"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/pick_up_times"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickDate_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pickTimes_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="@+id/materialTextView2"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pickTimesInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/pick_up_times"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="12dp"
        android:text="@string/drop_out_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropDate_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropTimes_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dropTimesInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/drop_out_times"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickTimes_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/driver_age"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickTimes_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:text="@string/stKategoriAge"
        android:textColor="@color/white"
        app:backgroundTint="@color/buttonSignUp"
        app:layout_constraintStart_toStartOf="@+id/ageTextView"
        app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        android:layout_width="112dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:text="@string/ndKategoriAge"
        app:backgroundTint="@color/buttonSignUp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton2"
        app:layout_constraintStart_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toTopOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        android:layout_width="112dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/trKategoriAge"
        app:backgroundTint="@color/buttonSignUp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton2"
        app:layout_constraintEnd_toEndOf="@+id/dropTimes_layout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/materialButton3"
        app:layout_constraintTop_toTopOf="@+id/materialButton2"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/search"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/buttonSignIn"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/materialTextView2"
        app:layout_constraintTop_toBottomOf="@+id/materialButton4" />


</androidx.constraintlayout.widget.ConstraintLayout>